# Siril

./: AUTHORS  ChangeLog  Makefile.am  NEWS  autogen.sh  configure.ac
platform-specific/linux/: siril.appdata.xml  (+3 more)
po/: POTFILES.in  ar_DZ.po  el.po  es_ES.po  fr.po  it_IT.po  nl_BE.po  pt_PT.po  tl_PH.po  zh_CN.po
src/: Makefile.am  PSF.c  PSF.h  callbacks.c  command.c  compositing.c  image_formats_internal.c  main.c  main_gegl_test.c  opencv.cpp  seqfile.c  sequence.c  sequence_list.c  single_image.c  siril.c  star_finder.c  utils.c
src/algos/: PSF.c  PSF.h  PSF_list.c  PSF_list.h  colors.c  cosmetic_correction.c  cosmetic_correction.h  demosaicing.c  fft.c  gradient.c  gradient.h  io_wave.c  pave.c  quality.c  quantize.c  reconstr.c  star_finder.c  star_finder.h  statistics.c  transform.c
src/compositing/: align_rgb.c  compositing.c
src/core/: command.c  command.h  histogram.c  initfile.c  processing.c  processing.h  proto.h  siril.c  siril.h  undo.c  utils.c
src/gui/: PSF_list.c  PSF_list.h  callbacks.c  callbacks.h  gtk.css  gtk_old.css  histogram.c  histogram.h  plot.c  plot.h  quality_plot.c  quality_plot.h  registration_preview.c  sequence_list.c  siril3.glade  statistics_list.c  vips_display.c  vips_display.h
src/gui/vips_operations/: siril_operations.h  vips_siril_log.c
src/io/: conversion.c  conversion.h  films.c  films.h  image_format_fits.c  image_formats_internal.c  image_formats_libraries.c  mp4_output.c  mp4_output.h  seqfile.c  sequence.c  ser.c  ser.h  single_image.c  single_image.h
src/io/avi_pipp/: avi_writer.cpp  avi_writer.h  pipp_avi_write.cpp  pipp_avi_write_dib.cpp  pipp_utf8_linux.cpp  pipp_utf8_osx.cpp
src/opencv/: opencv.cpp  opencv.h
src/opencv/ecc/: ecc.h
src/registration/: registration.c  registration.h  registration_preview.c
src/registration/matching/: atpmatch.c  atpmatch.h  match.c  misc.c  misc.h
src/stacking/: stacking.c  stacking.h
